stop text from overlapping the icons in scenes

--- a/sass/partials/modules/_modules.scss
+++ b/sass/partials/modules/_modules.scss
@@ -187,6 +187,8 @@
             display: inline;
             position: absolute;
             right: 10px;
+            max-width: calc(100% - 60px);
+            text-align: right;
         }
 
         img, p {
